--- a/package/Config.in
+++ b/package/Config.in
@@ -115,6 +115,7 @@ source "package/sdl_sound/Config.in"
 source "package/sdl_net/Config.in"
 source "package/sdl_ttf/Config.in"
 source "package/sdl_gfx/Config.in"
+source "package/tango-icon-theme/Config.in"
 
 comment "other GUIs"
 source "package/qt/Config.in"
