--- a/package/Config.in
+++ b/package/Config.in
@@ -281,6 +281,7 @@ source "package/cairo/Config.in"
 source "package/fltk/Config.in"
 source "package/fontconfig/Config.in"
 source "package/freetype/Config.in"
+source "package/dejavu-fonts/Config.in"
 source "package/gtk2-engines/Config.in"
 source "package/gtk2-themes/Config.in"
 source "package/jpeg/Config.in"
