ti tools for dm365 and OMAP3 processors

--- a/package/Config.in
+++ b/package/Config.in
@@ -396,6 +396,9 @@ menu "Miscellaneous"
 source "package/shared-mime-info/Config.in"
 endmenu
 
+#TI's Packages
+source "package/ti/Config.in"
+
 menu "Networking applications"
 source "package/argus/Config.in"
 source "package/avahi/Config.in"
