--- a/configs/dm365leopardboard_defconfig
+++ b/configs/dm365leopardboard_defconfig
@@ -228,7 +228,7 @@ BR2_PACKAGE_ALSA_LIB_OLD_SYMBOLS=y
 #
 # Sensortherm
 #
-# BR2_PACKAGE_VIDEOSTREAM=y
+BR2_PACKAGE_VIDEOSTREAM=y
 # BR2_PACKAGE_VIDEOSTREAM_DEBUG is not set
 
 #
