add cppunit, cunit and gtest and support for zip
thanks to Paulius Zaleckas
http://old.nabble.com/-RFC-PATCH--Add-support-for-sources-in-.zip-td30343769.html

--- a/package/Makefile.package.in
+++ b/package/Makefile.package.in
@@ -80,6 +80,7 @@ INFLATE.tbz  = $(BZCAT)
 INFLATE.tbz2 = $(BZCAT)
 INFLATE.tgz  = $(ZCAT)
 INFLATE.xz   = $(XZCAT)
+INFLATE.zip  = support/scripts/unzip_wrapper.sh
 INFLATE.tar  = cat
 
 # MESSAGE Macro -- display a message in bold type
