--- a/package/Config.in
+++ b/package/Config.in
@@ -48,6 +48,8 @@ source "package/ccache/Config.in"
 if BR2_PACKAGE_BUSYBOX_SHOW_OTHERS
 source "package/coreutils/Config.in"
 endif
+source "package/cppunit/Config.in"	
+source "package/cunit/Config.in"	
 source "package/cvs/Config.in"
 if BR2_PACKAGE_BUSYBOX_SHOW_OTHERS
 source "package/diffutils/Config.in"
@@ -67,6 +69,7 @@ source "package/gperf/Config.in"
 if BR2_PACKAGE_BUSYBOX_SHOW_OTHERS
 source "package/grep/Config.in"
 endif
+source "package/gtest/Config.in"
 source "package/intltool/Config.in"
 source "package/make/Config.in"
 source "package/mpc/Config.in"
