--- a/package/Config.in
+++ b/package/Config.in
@@ -292,6 +292,7 @@ source "package/jpeg/Config.in"
 source "package/libart/Config.in"
 source "package/libdrm/Config.in"
 source "package/libexif/Config.in"
+source "package/exif/Config.in"
 source "package/libgail/Config.in"
 source "package/libgeotiff/Config.in"
 source "package/libglade/Config.in"
